--- a/TentamenOOAD/CrimeHeadlineSystem.Classes/CrimeHeadlineSystem.Classes.csproj
+++ b/TentamenOOAD/CrimeHeadlineSystem.Classes/CrimeHeadlineSystem.Classes.csproj
@@ -42,12 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Factory\ScrapingFactory.cs" />
+    <Compile Include="Interface\IScrapingClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\PolisenScrapingClient.cs" />
+    <Compile Include="Service\ScrapingClient.cs" />
+    <Compile Include="Service\UtryckningScrapingClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
