--- a/TentamenOOAD/CrimeHeadlineSystem.Web/CrimeHeadlineSystem.Web.csproj
+++ b/TentamenOOAD/CrimeHeadlineSystem.Web/CrimeHeadlineSystem.Web.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -129,11 +130,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CrimeHeadlineSystem.Classes\CrimeHeadlineSystem.Classes.csproj">
+      <Project>{ad8f068b-c5b8-48ac-9004-1d34081a71a0}</Project>
+      <Name>CrimeHeadlineSystem.Classes</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
