Classes are finished and now you can see the latest news from both sites

--- a/TentamenOOAD/CrimeHeadlineSystem.Web/CrimeHeadlineSystem.Web.csproj
+++ b/TentamenOOAD/CrimeHeadlineSystem.Web/CrimeHeadlineSystem.Web.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -130,7 +131,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -140,6 +140,9 @@
       <Project>{ad8f068b-c5b8-48ac-9004-1d34081a71a0}</Project>
       <Name>CrimeHeadlineSystem.Classes</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
